Ass-1/getting_started/test_files/syntax_errors/InvalidTypeDeclaration.cpm
class MyClass {
  Init(): boolean {
    int int //@error - syntax (invalid type declaration: identifier expected before ':')
    return true
  }
}

main() : int {
  print(MyClass().Init())
  return 0
}